Template updates to support directions